now using flexbox to hopefully fix issues with inputs on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ input,
 textarea {
 	background-color: black;
 	border-color: gray;
+	z-index: 999999999;
 }
 
 input[type=number] {
@@ -48,6 +49,25 @@ b {
 .right {
 	width: 100px;
 	float: right;
+}
+
+.parent {
+	position: relative;
+	display: flex;
+	width: 100%;
+	height: 100%;
+}
+
+.parent-row {
+	flex-flow: row nowrap;
+}
+
+.parent-col {
+	flex-flow: column nowrap;
+}
+
+.child {
+	flex: 1 1 0%;
 }
 
 .noselect {
